[tool.poetry]
name = "docker-example"
version = "0.1.0"
description = ""
authors = ["Ryosuke Onose <dev@onose.ws>"]

[tool.poetry.dependencies]
python = "3.8.5"
tensorflow = "2.4.1"
numpy = "1.19.5"
scipy = "^1.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
